<?xml version="1.0"?><!--
    Desarrollo de Aplicaciones para Dispositivos Moviles
    TRABAJO PRACTICO FINAL

    strings.xml
    Ubicacion: res.values

    -->

<resources>
    <string name="app_name">CIIE Region 6</string>
    <string name="prefs_file">com.fedegiorno.ciie_region_6.PREFERENCES_FILE_KEY</string>

    <string name="splash">CIIE - REGION VI</string>
    <string name="Tab1">PRESENTACION</string>
    <string name="Tab2">TEMARIO</string>
    <string name="Tab3">REQUISITOS</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Formatos</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="backcolor_title">Color de fondo</string>
    <string name="fontsize_title">Tamaño texto</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Items overflow -->
    <string name="Item1">Informacion CIIEs</string>
    <string name="Item2">Altas Cursos</string>
    <string name="Item3">Modificar Curso</string>
    <string name="Item4">Eliminar Curso</string>
    <string name="Item5">Inscripcion</string>
    <string name="Item6">Salir</string>

    <string name="Cancelar">Cancelar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Inscripcion">Inscripcion</string>
    <string name="Cerrar">Cerrar Sesion</string>
    <string name="Google">Inicia sesion con Google</string>
    <string name="Facebook">Inicia sesion con Facebook</string>

    <string name="Apellido">Apellido</string>
    <string name="Nombres">Nombres</string>
    <string name="Usuario">Usuario</string>
    <string name="DNI">DNI</string>
    <string name="eMail">eMail</string>
    <string name="Clave">Clave de acceso</string>
    <string name="Registrar">Registrar</string>
    <string name="Agregar">Agregar</string>
    <string name="Cargo">Cargo</string>
    <string name="Telefono">Telefono</string>
    <string name="Direccion">Direccion</string>
    <string name="Nacimiento">Fecha de nacimiento</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">337235101293883</string>
    <string name="fb_login_protocol_scheme">fb337235101293883</string>

    <string name="Pizarra">Pizarra</string>
    <string name="Capacitador">Capacitador</string>
    <string name="Curso">Curso</string>

    <string name="Inscripcion_texto_1">Inscripcion de </string>
    <string name="Inscripcion_texto_2">CIIE SAN FERNANDO</string>
    <string name="SeleccioneCargo">Seleccione su cargo docente</string>
    <string name="SeleccioneEscuela">Seleccione su Escuela</string>


    <string-array name="cargos">
        <item>Maestra de inicial</item>
        <item>Maestra de primaria</item>
        <item>Maestra de adultos</item>
    </string-array>

    <string-array name="escuelas">
        <item>Escuela Nro. 1</item>
        <item>Escuela Nro. 9</item>
        <item>Escuela Nro. 22</item>
        <item>Escuela Nro. 32</item>
        <item>Escuela Nro. 6</item>
        <item>Escuela Nro. 5</item>
    </string-array>

</resources>